<resources>
    <string name="app_name">物友</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">个人中心</string>
    <string name="title_notifications">Notifications</string>


    <string name="realm_name">Shopping.realm</string>
    <integer name="realm_version">1</integer>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sing</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Permissions are needed ."</string>

    <string name="login_title">登陆</string>
    <string name="login_register">注册</string>

    <string name="register_phone_hint">请输入手机号码</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_password_hint">请输入密码</string>

    <string name="my_self_nick_name">未设置</string>

    <string name="my_self_issue_number">我的发布：%d</string>
    <string name="my_self_order_number">我的订单：%d</string>

    <string-array name="TabTitle">
        <item>季节</item>
        <item>时辰</item>
        <item>年龄</item>
    </string-array>


    <string-array name="homePagerTitle">
        <item>春季</item>
        <item>夏季</item>
        <item>秋季</item>
        <item>冬季</item>
    </string-array>

    <string-array name="homePagerDes">
        <item>@string/home_des_1</item>
        <item>@string/home_des_2</item>
        <item>@string/home_des_3</item>
        <item>@string/home_des_4</item>
    </string-array>

    <string-array name="homePagerTitle1">
        <item>子时</item>
        <item>丑时</item>
        <item>寅时</item>
        <item>卯时</item>
        <item>辰时</item>
        <item>巳时</item>
        <item>午时</item>
        <item>未时</item>
        <item>申时</item>
        <item>酉时</item>
        <item>戌时</item>
        <item>亥时</item>
    </string-array>

    <string-array name="homePagerDes1">
        <item>@string/home_time_1</item>
        <item>@string/home_time_2</item>
        <item>@string/home_time_3</item>
        <item>@string/home_time_4</item>
        <item>@string/home_time_5</item>
        <item>@string/home_time_6</item>
        <item>@string/home_time_7</item>
        <item>@string/home_time_8</item>
        <item>@string/home_time_9</item>
        <item>@string/home_time_10</item>
        <item>@string/home_time_11</item>
        <item>@string/home_time_12</item>
    </string-array>

    <string-array name="homePagerTitle2">
        <item>10岁</item>
        <item>20岁</item>
        <item>30岁</item>
        <item>40岁</item>
        <item>50岁</item>
        <item>60岁</item>
        <item>70岁</item>
        <item>80岁</item>
        <item>90岁</item>
        <item>100岁</item>
    </string-array>

    <string-array name="homePagerDes2">
        <item>@string/home_age_1</item>
        <item>@string/home_age_2</item>
        <item>@string/home_age_3</item>
        <item>@string/home_age_4</item>
        <item>@string/home_age_5</item>
        <item>@string/home_age_6</item>
        <item>@string/home_age_7</item>
        <item>@string/home_age_8</item>
        <item>@string/home_age_9</item>
        <item>@string/home_age_10</item>
    </string-array>


</resources>
